// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with label 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Mulish-Regular",
        "fontSize": 21.13142857142857,
        "fontWeight": "normal",
      },
      Object {
        "color": "#000",
      },
      Object {
        "textAlign": "center",
      },
      Object {
        "backgroundColor": "#FAD000",
        "borderRadius": 32,
        "height": 64,
        "lineHeight": 64,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "overflow": "hidden",
        "width": 64,
      },
    ]
  }
  theme={
    Object {
      "colors": Object {
        "background": "#FFF",
        "backgroundLayout": "rgba(0, 0, 0, 0.8)",
        "black": "#000",
        "error": "#B00020",
        "greyOpac10": "rgba(53, 53, 53, 0.1)",
        "greyOpac50": "rgba(53, 53, 53, 0.5)",
        "lightgrey": "#D7D7D7",
        "linkColor": "#0000EE",
        "primary": "#FAD000",
        "primaryVariant": "#3700B3",
        "secondary": "#03DAC6",
        "secondaryVariant": "#018786",
        "shadowColor": "#222",
        "textColor": "#000",
        "transparent": "transparent",
        "white": "#FFF",
      },
      "dark": false,
    }
  }
>
  AA
</Text>
`;

exports[`renders correctly with label, fontSize & radius 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Mulish-Regular",
        "fontSize": 29.485714285714288,
        "fontWeight": "normal",
      },
      Object {
        "color": "#000",
      },
      Object {
        "textAlign": "center",
      },
      Object {
        "backgroundColor": "#FAD000",
        "borderRadius": 36,
        "height": 72,
        "lineHeight": 72,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "overflow": "hidden",
        "width": 72,
      },
    ]
  }
  theme={
    Object {
      "colors": Object {
        "background": "#FFF",
        "backgroundLayout": "rgba(0, 0, 0, 0.8)",
        "black": "#000",
        "error": "#B00020",
        "greyOpac10": "rgba(53, 53, 53, 0.1)",
        "greyOpac50": "rgba(53, 53, 53, 0.5)",
        "lightgrey": "#D7D7D7",
        "linkColor": "#0000EE",
        "primary": "#FAD000",
        "primaryVariant": "#3700B3",
        "secondary": "#03DAC6",
        "secondaryVariant": "#018786",
        "shadowColor": "#222",
        "textColor": "#000",
        "transparent": "transparent",
        "white": "#FFF",
      },
      "dark": false,
    }
  }
>
  AA
</Text>
`;

exports[`renders correctly with sourceUri 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "transparent",
        "borderRadius": 32,
        "height": 78.62857142857143,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "width": 78.62857142857143,
      },
    ]
  }
>
  <FastImageView
    resizeMode="cover"
    source={
      Object {
        "cache": undefined,
        "priority": "normal",
        "uri": "https://unsplash.it/400/400?image=1",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;
